# Labeled-Images-Augmentation-Platform

./: .gitignore  CMakeLists.txt
data/test_labeled_images/: 000000000139.txt
demo/: generate_random_subdataset.cpp  generate_warp_frames_for_presentation.cpp
include/: affine_processing.hpp  annotation.hpp  annotation_processing.hpp  augmentation_pipeline.hpp  augmentation_pipeline_component_base.hpp  cell_mover_mesh_grid_nodes_callback.hpp  common_types_project.hpp  cv_resize_tools.hpp  darknet_dataset.hpp  distortion_mesh_generator_common.hpp  distortion_mesh_generator_longitudinal_waves.hpp  distortion_mesh_generator_optical_distortion.hpp  distortion_mesh_generator_random_move.hpp  distortion_mesh_generator_transverse_waves.hpp  distortion_mesh_generator_triangle_zoo.hpp  distortion_mesh_generator_zoo.hpp  draw_custom_line.hpp  frame_warp_processing.hpp  marked_frame.hpp  math_utils_common.hpp  mesh_grid_nodes_mover.hpp  mesh_grid_nodes_mover_common.hpp  path_processing.hpp  polygon_processing.hpp  random_processing.hpp  ranges_processing.hpp  rect_processing.hpp  single_line_annotation.hpp  space_level_aug_pipeline_components_zoo.hpp  string_processing.hpp  txt_files_processing.hpp  utils.hpp  warp_mesh_applicator.hpp
src/: affine_processing.cpp  annotation.cpp  annotation_processing.cpp  augmentation_pipeline_component_base.cpp  cell_mover_mesh_grid_nodes_callback.cpp  common_types_project.cpp  cv_resize_tools.cpp  darknet_dataset.cpp  distortion_mesh_generator_common.cpp  distortion_mesh_generator_longitudinal_waves.cpp  distortion_mesh_generator_optical_distortion.cpp  distortion_mesh_generator_random_move.cpp  distortion_mesh_generator_transverse_waves.cpp  distortion_mesh_generator_triangle_zoo.cpp  distortion_mesh_generator_zoo.cpp  draw_custom_line.cpp  frame_warp_processing.cpp  marked_frame.cpp  math_utils_common.cpp  mesh_grid_nodes_mover.cpp  path_processing.cpp  polygon_processing.cpp  random_processing.cpp  rect_processing.cpp  single_line_annotation.cpp  space_level_aug_pipeline_components_zoo.cpp  string_processing.cpp  txt_files_processing.cpp  utils.cpp  vector_creation_routines.cpp  warp_mesh_applicator.cpp
tests/: test_convex_polygon.cpp  test_equation_find_pos_map.cpp  test_generate_mesh_distortion_augmentation.cpp  test_get_perspective_transform_mat.cpp  test_marked_frame_distortion.cpp  test_mesh_triangle.cpp  test_resize_save_proportions.cpp  test_triangle_warp.cpp
